DuPont DevSB/src/objects/Dynamic_Approval__c.object
<CustomObject>
    <description>Dynamic Approval Routing automates approval processes in which the approvers are selected based on the matching field Criteria values present in this Object. The process routes through multiple levels of approvals as configured in the Approval Process and matching Data value present in this object.</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application for which the record is being inserted</description>
        <label>Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>Criteria based on which the approver would be chosen</description>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <description>Object ID of the Object for which the approval criteria is inserted</description>
        <label>Object ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Dynamic Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Application__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Criteria__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Approval-{000}</displayFormat>
        <label>Dynamic Approval Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>